--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <html>
 <head>
-<title>Mineclick</title>
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64789225-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    
+<title>Mineclicks</title>
 <link href="lib/jquery-ui-1.11.1/jquery-ui.css" rel="stylesheet" />
 <link href="lib/joyride-master/joyride-2.1.css" rel="stylesheet"/>
 <link href="lib/select2-3.5.1/select2.css" rel="stylesheet"/>
 <link href="lib/island/css/map.css" rel="stylesheet">
 <link href="lib/collapsiblelists/CollapsibleLists.css" rel="stylesheet"/>
-<link href="css/mineclick.css" rel="stylesheet" />
+<link href="css/mineclicks.css" rel="stylesheet" />
 
 <!-- ideas
 
@@ -102,7 +114,6 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 Graphs:
 * http://stackoverflow.com/questions/16058073/how-do-i-draw-a-graph-or-tree-structure-in-javascript
 * http://theory.stanford.edu/~amitp/GameProgramming/MapRepresentations.html
-<<<<<<< HEAD
 * MUD javascript map: http://www.mudconnect.com/SMF/index.php?topic=74492.msg163422#msg163422 , https://github.com/arendjr/PlainText
 
 INSPIRATION:
@@ -111,7 +122,6 @@ Dynamic worlds, dynamic creatures, dynamic quests:
    - Concepts: 
 =======
 * This one may work!  http://js.cytoscape.org/#top
->>>>>>> origin/master
 -->
 
 <!-- 
