Notes: jquery mobile

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ concepts:
 * CSS selectors:
 * http://www.w3schools.com/cssref/css_selectors.asp
 
+* JQuery mobile:
+* http://www.w3schools.com/jquerymobile/default.asp
+
 * Civcraft tech tree
 http://hydra-media.cursecdn.com/civcraft.gamepedia.com/5/5c/Phase_8_TT.jpg
 concepts:
