--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Game Design Patterns: http://gameprogrammingpatterns.com/
 * Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
 
+* Battle:
+* Alightments: good/evil, neutral: if you run into good guys, can recruit(/fight if evil), if you run into bad, can recruit/fight (hero/bandit)
+* Attacks: swipe (1/5th second), strike (3/4 second), bash (2 seconds), etc.  Button mashing, penalty for hitting too early?
+*    critical hit if you hit the button within xx% of when that action becomes available (like 10% of attack time is a critical attack instead of regular)
+*    back/forward move back or forward in rows (less or more damage from melee/ranged), allows player to attack or recover
+*    bow damage 100% at range 10-40, 80% at [0-10, 40-50], 50% [50-60], 20% [70-80], 0% [80+]
+*    sword damage 100% at range 0-10, 0% [10+]... etc
+
 * UI:
 * Design School for Developers - http://webdesign.tutsplus.com/series/design-school-for-developers--webdesign-13793
 ** Step 1 Planning a Design Project - http://webdesign.tutsplus.com/articles/planning-a-design-project--webdesign-13277
