--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Game development design - http://gamedevelopment.tutsplus.com/
 * Game Design Patterns: http://gameprogrammingpatterns.com/
 * Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
+* Procedural content generation (dynamic room descriptions... etc): http://pcg.wikidot.com/
 
 * Battle:
 * Alightments: good/evil, neutral: if you run into good guys, can recruit(/fight if evil), if you run into bad, can recruit/fight (hero/bandit)
@@ -103,6 +104,29 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Collapsable tree menu: http://www.thecssninja.com/css/css-tree-menu
 * Collapsable list: http://code.stephenmorley.org/javascript/collapsible-lists/
 * 8 best jquery trees: http://webrevisions.com/jquery-plugins/8-best-jquery-tree-view-plugin/#.VW0gElVViko
+
+* Bootstrap:
+** Documentation: http://getbootstrap.com/
+** W3 Schools: http://www.w3schools.com/bootstrap/default.asp
+** Font-Awesome (extra glyphicons): extra icons http://fortawesome.github.io/Font-Awesome/icons/
+** Rotated Glyphicon css example (for diagonal arrows): http://bootsnipp.com/snippets/featured/glyphicon-animate-rotation-and-flip
+** Progress bar stacked (for battles): http://getbootstrap.com/components/#progress-stacked
+
+* Our World is Broken:
+** Players should not need instruction, they should learn from the *feedback systems*, and then reference documentation if they get stuck
+** Make a game to help players do hard work that they enjoy and appreciate
+** Help them choose the right work for themselves at the right time
+** All good gameplay is hard work, it's hard work they choose for themselves, and when they do the hard work they prime their minds for happiness
+** The right hard work takes different forms for different people at different times:
+*** High stakes work: high action, thrills player for success, but also for spectacular failure
+*** Risk of game's "failure", makes player feel more alive
+** There is also busy work: when chosen by player can also make them feel just as good
+*** Busy work enabled by focused activity for hands + mind for a clear result
+** 
+
+
+** Incremental game design:
+* http://gamedevelopment.tutsplus.com/series/numbers-getting-bigger--cms-847
 
 * Dark Room - Web -> IOS
 * http://www.gamasutra.com/view/news/212230/A_Dark_Rooms_unique_journey_from_the_web_to_iOS.php
