Bootstrap scratch work

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 ** Font-Awesome (extra glyphicons): extra icons http://fortawesome.github.io/Font-Awesome/icons/
 ** Rotated Glyphicon css example (for diagonal arrows): http://bootsnipp.com/snippets/featured/glyphicon-animate-rotation-and-flip
 ** Progress bar stacked (for battles): http://getbootstrap.com/components/#progress-stacked
+** sticky footer: http://stackoverflow.com/questions/17966140/twitter-bootstrap-3-sticky-footer
+** Flexbox sticky footer: http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
 
 * Our World is Broken:
 ** Players should not need instruction, they should learn from the *feedback systems*, and then reference documentation if they get stuck
