Playing with Bootstrap columns

--- a/index.html
+++ b/index.html
@@ -153,12 +153,13 @@ Graphs:
 * http://theory.stanford.edu/~amitp/GameProgramming/MapRepresentations.html
 * MUD javascript map: http://www.mudconnect.com/SMF/index.php?topic=74492.msg163422#msg163422 , https://github.com/arendjr/PlainText
 
+Cytoscape: http://js.cytoscape.org/#top
+* Cytoscape work on jsbin: http://jsbin.com/kiyoqo/edit?css,js,output
+
 INSPIRATION:
 Dynamic worlds, dynamic creatures, dynamic quests:
 * http://web.archive.org/web/20080211222642/http://www.cs.umd.edu/~jra/craft3.pdf -
    - Concepts: 
-=======
-* This one may work!  http://js.cytoscape.org/#top
 -->
 
 <!-- 
