--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -17,12 +17,38 @@
     <script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <header><h3>header</h3></header>
-    <div class="main">
-    <h1>Hello, world!</h1>
+    <header>
+      <h3>header</h3>
+    </header>
+    
+    <div class="main container">
+      <h1>Hello, world!</h1>
+      <div class="row">
+        <h3>Inventory</h4>
+        <div class="col-sm-2">
+          <h4>Player</h4>
+        </div>
+        <div class="col-sm-2">
+          <h4>Ground</h4>
+        </div>
+        <div class="col-sm-6">
+          <h4>Console...</h4>
+        </div>
+        <div class="col-sm-2">
+          <h4>Actions</h4>
+        </div>
+      </div>
     </div>
-    <footer>
-      <div>Foo-ter</div>
+    
+    <footer class="site-footer container-full">
+      <div class="row">
+        <div class="col-sm-12">Foo-ter</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">.col-sm-4</div>
+        <div class="col-sm-4">.col-sm-4</div>
+        <div class="col-sm-4">.col-sm-4</div>
+      </div>
     </footer>
   </body>
 </html>
