--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -21,33 +21,33 @@
       <h3>header</h3>
     </header>
     
-    <div class="main container">
-      <h1>Hello, world!</h1>
+    <div class="main container full">
+      <p>Hello, world!</p>
       <div class="row">
         <h3>Inventory</h4>
-        <div class="col-sm-2">
+        <div class="col-xs-2">
           <h4>Player</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-2">
           <h4>Ground</h4>
         </div>
-        <div class="col-sm-6">
+        <div class="col-xs-6">
           <h4>Console...</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-2">
           <h4>Actions</h4>
         </div>
       </div>
     </div>
     
-    <footer class="site-footer container-full">
+    <footer class="site-footer full">
       <div class="row">
-        <div class="col-sm-12">Foo-ter</div>
+        <div class="col-xs-12">Foo-ter</div>
       </div>
       <div class="row">
-        <div class="col-sm-4">.col-sm-4</div>
-        <div class="col-sm-4">.col-sm-4</div>
-        <div class="col-sm-4">.col-sm-4</div>
+        <div class="col-xs-4">.col-xs-4</div>
+        <div class="col-xs-4">.col-xs-4</div>
+        <div class="col-xs-4">.col-xs-4</div>
       </div>
     </footer>
   </body>
