--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ Graphs:
 Cytoscape: http://js.cytoscape.org/#top
 * Cytoscape work on jsbin: http://jsbin.com/kiyoqo/edit?css,js,output
 
+Quests:
+* randomly generated WoW-style quests: who, what, when, where, why spelled out
+
+
 INSPIRATION:
 Dynamic worlds, dynamic creatures, dynamic quests:
 * http://web.archive.org/web/20080211222642/http://www.cs.umd.edu/~jra/craft3.pdf -
