--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -25,17 +25,17 @@
       <p>Hello, world!</p>
       <div class="row">
         <h3>Inventory</h4>
-        <div class="col-xs-2">
-          <h4>Player</h4>
+        <div class="col-xs-1">
+          <h4 class="center">Player</h4>
+        </div>
+        <div class="col-xs-1">
+          <h4 class="center">Ground</h4>
+        </div>
+        <div class="col-xs-8">
+          <h4 class="center">Console...</h4>
         </div>
         <div class="col-xs-2">
-          <h4>Ground</h4>
-        </div>
-        <div class="col-xs-6">
-          <h4>Console...</h4>
-        </div>
-        <div class="col-xs-2">
-          <h4>Actions</h4>
+          <h4 class="center">Actions</h4>
         </div>
       </div>
     </div>
