Done with fun with buttons

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -15,7 +15,6 @@
     <script src="lib/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-    <script src="lib/bootstrap-toolkit/bootstrap-toolkit.min.js"></script>
     
     <script src="js/scratch-bootstrap.js"></script>
   </head>
@@ -28,10 +27,16 @@
       <div class="row">
         <p>Inventory</p>
         <div class="col-xs-1">
-          <h4 class="center">Player</h4>
+          <div class="centered">
+            <h4 class="center">Player</h4>
+            <button class="btn btn-default">Apple</button>
+            <button class="btn btn-default">Stick</button>
+          </div>
         </div>
         <div class="col-xs-1">
           <h4 class="center">Ground</h4>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
         </div>
         <div class="col-xs-8">
           <h4 class="center">Console...</h4>
@@ -43,29 +48,25 @@
     </div>
     
     <footer class="site-footer full">
-      <div class="row">
-        <div class="col-xs-12">Foo-ter</div>
-      </div>
-      <div class="row">
+      <div class="row full">
         <div class="col-xs-4">.col-xs-4</div>
         <div class="col-xs-4">.col-xs-4</div>
-        <div class="col-xs-1">.col-xs-2</div>
-        <div class="col-xs-3">.col-xs-2
-          <table>
+        <div class="col-xs-4">
+          <table class="pull-right">
             <tr>
-              <td><button id="nwbutton" type="button" class="btn btn-default">NW</button></td>
-              <td><button type="button" class="btn btn-default">N</button></td>
-              <td><button type="button" class="btn btn-default">NE</button></td>
+              <td><button id="nwbutton" type="button" class="btn btn-default direction-button">NW</button></td>
+              <td><button type="button" class="btn btn-default direction-button">N</button></td>
+              <td><button type="button" class="btn btn-default direction-button">NE</button></td>
             </tr>
             <tr>
-              <td><button type="button" class="btn btn-default">W</button></td>
-              <td><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span></button></td>
-              <td><button type="button" class="btn btn-default">E</button></td>
+              <td><button type="button" class="btn btn-default direction-button">W</button></td>
+              <td><button type="button" class="btn btn-default direction-button"><span class="glyphicon glyphicon-remove"></span></button></td>
+              <td><button type="button" class="btn btn-default direction-button">E</button></td>
             </tr>
             <tr>
-              <td><button type="button" class="btn btn-default">SW</button></td>
-              <td><button type="button" class="btn btn-default">S</button></td>
-              <td><button type="button" class="btn btn-default">SE</button></td>
+              <td><button type="button" class="btn btn-default direction-button">SW</button></td>
+              <td><button type="button" class="btn btn-default direction-button">S</button></td>
+              <td><button type="button" class="btn btn-default direction-button">SE</button></td>
             </tr>
           </table>
         </div>
