Height auto resizes when changing screen

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -23,17 +23,34 @@
       <h3>header</h3>
     </header>
     
-    <div class="main container full">
-      <div class="row">
-        <p>Inventory</p>
-        <div class="col-xs-1">
-          <div class="centered">
+    <div id="maincol" class="main container full">
+      <div id="mainrow" class="row">
+        <div class="col-xs-1 full-height">
+          <div>
             <h4 class="center">Player</h4>
             <button class="btn btn-default">Apple</button>
             <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Stickz</button>
+            <button class="btn btn-default">Stickz</button>
           </div>
         </div>
-        <div class="col-xs-1">
+        <div class="col-xs-1 full-height">
           <h4 class="center">Ground</h4>
           <button class="btn btn-default">Stick</button>
           <button class="btn btn-default">Stick</button>
@@ -42,7 +59,11 @@
           <h4 class="center">Console...</h4>
         </div>
         <div class="col-xs-2">
-          <h4 class="center">Actions</h4>
+          <div class="centered">
+            <h4 class="center">Actions</h4>
+            <button class="btn btn-default">Forage</button>
+            <button class="btn btn-default">Build</button>
+          </div>
         </div>
       </div>
     </div>
