--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -25,7 +25,7 @@
     
     <div id="maincol" class="main container full">
       <div id="mainrow" class="row">
-        <div class="col-xs-1 full-height">
+        <div id="playercol" class="col-xs-1 full-height">
           <div>
             <h4 class="center">Player</h4>
             <button class="btn btn-default">Apple</button>
@@ -54,9 +54,38 @@
           <h4 class="center">Ground</h4>
           <button class="btn btn-default">Stick</button>
           <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
+          <button class="btn btn-default">Stick</button>
         </div>
-        <div class="col-xs-8">
+        <div id="centercol" class="col-xs-8">
           <h4 class="center">Console...</h4>
+          <div id="eventDiv" class="contentholder content-center"></div>
         </div>
         <div class="col-xs-2">
           <div class="centered">
