--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 ** Progress bar stacked (for battles): http://getbootstrap.com/components/#progress-stacked
 ** sticky footer: http://stackoverflow.com/questions/17966140/twitter-bootstrap-3-sticky-footer
 ** Flexbox sticky footer: http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
+** 50 must-have plugins: http://tutorialzine.com/2013/07/50-must-have-plugins-for-extending-twitter-bootstrap/
 
 * Our World is Broken:
 ** Players should not need instruction, they should learn from the *feedback systems*, and then reference documentation if they get stuck
