--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -88,8 +88,8 @@
             <li class="active"><a href="#eventDiv" data-toggle="tab">Events</a></li>
             <li><a href="#otherContent" data-toggle="tab">Map</a></li>
           </ul>
-          <div class="tab-content  content-center ">
-            <div id="eventDiv" class="contentholder tab-pane fade in active"></div>
+          <div class="tab-content  contentholder ">
+            <div id="eventDiv" class="content-center  tab-pane fade in active"></div>
             <div id="otherContent" class="tab-pane fade">
               <p> some content</p>
             </div>
