Gross JS hacks to get heights working

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -28,12 +28,12 @@
         <div id="playercol" class="col-xs-2 full-height">
           <div>
             <h4 class="center">Player</h4>
-            <button class="btn btn-default">Apple</button>
+            <button class="btn btn-default">Apple (5)</button>
             <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
+            <button class="btn btn-default">Salamander</button>
+            <button class="btn btn-default">Giant</button>
+            <button class="btn btn-default">Your mother</button>
+            <button class="btn btn-default">other long word</button>
             <button class="btn btn-default">Stick</button>
             <button class="btn btn-default">Stick</button>
             <button class="btn btn-default">Stick</button>
