clear button working

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -91,7 +91,7 @@
           <div class="tab-content  contentholder ">
             <div id="eventDivHolder" class="  tab-pane fade in active">
               <div id="eventDiv" class="content-center"></div>
-              <button class="btn btn-default">Clear</button>
+              <button class="btn btn-default" id="clearButton">Clear</button>
              </div>
             <div id="otherContent" class="tab-pane fade">
                 <img id="mapImage" class="img-responsive" src="images/map.png" alt="canvas" />
