--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
 * Procedural content generation (dynamic room descriptions... etc): http://pcg.wikidot.com/
 
+* Babel - js framework Derrick recommended 
+
 * Battle:
 * Alightments: good/evil, neutral: if you run into good guys, can recruit(/fight if evil), if you run into bad, can recruit/fight (hero/bandit)
 * Attacks: swipe (1/5th second), strike (3/4 second), bash (2 seconds), etc.  Button mashing, penalty for hitting too early?
