Body shouldn't scroll

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -18,7 +18,7 @@
     
     <script src="js/scratch-bootstrap.js"></script>
   </head>
-  <body>
+  <body class="noscroll">
     <header>
       <h3>header</h3>
     </header>
