Initial working version of main column element sizes

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -84,7 +84,7 @@
           <button class="btn btn-default">Stick</button>
         </div>
         <div id="centercol" class="col-xs-6">
-          <ul class="nav nav-tabs">
+          <ul id="maincol-tabs" class="nav nav-tabs">
             <li class="active"><a href="#eventDivHolder" data-toggle="tab">Events</a></li>
             <li><a href="#otherContent" data-toggle="tab">Map</a></li>
           </ul>
