--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
 <!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
