--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <div id="mapContainer">
         <canvas id="land" height="500" width="500"></canvas>
 </div>
-<div id="internalMapContainer">
+<div id="internalMapContainer"> <!-- Cytoscape js -->
         
 </div>
         <canvas id="perlin" hidden="true"></canvas>
