Location description in bottom center pane

--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -139,7 +139,29 @@
         <div class="col-xs-3">
           <img id="minimapImage" class="img-responsive" src="images/minimap.png" alt="canvas2" style="max-height: 150px" />
         </div>
-        <div class="col-xs-6">.col-xs-4</div>
+        <div class="col-xs-6">
+          <div id="currentTerrain" class="well nopadding">
+            <table class="terrainTable table nopadding">
+              <tbody>
+                <tr>
+                  <th colspan="2" id="selectedTerrainTable">Camp @ Hill</th>
+                </tr>
+                <tr>
+                  <td>Features:</td>
+                  <td><a title="Rivers allow easier travel and increased fertility." data-toggle="tooltip" data-placement="left" >River</a>, <a title="Source of water." data-toggle="tooltip" data-placement="right" >Fresh Water Source</a></td>
+                </tr>
+                <tr>
+                  <td>Special Traits:</td>
+                  <td>None</td>
+                </tr>
+                <tr>
+                  <td>Buildings:</td>
+                  <td>None</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
         <div class="col-xs-3">
           <table class="pull-right">
             <tr>
