--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Examples:
 * Tympanous (tons of images) : http://tympanus.net/codrops/category/playground/
 * Modal Windows: http://tympanus.net/codrops/2013/06/25/nifty-modal-window-effects/ , Demo: http://tympanus.net/Development/ModalWindowEffects/
+* Iphone minimal-ui -- need minimal ui to hide address bar: https://github.com/gajus/brim
 
 * UI Ideas:
 * Clicking FF7 http://clickingff7.com/#/map
