Title, header, save/load/reset buttons, timer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 *** Risk of game's "failure", makes player feel more alive
 ** There is also busy work: when chosen by player can also make them feel just as good
 *** Busy work enabled by focused activity for hands + mind for a clear result
-** 
+** "Always connect the individual to something bigger"
 
 
 ** Incremental game design:
