--- a/scratch-bootstrap.html
+++ b/scratch-bootstrap.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Mineclicks</title>
 
     <!-- Bootstrap -->
     <link href="lib/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,9 +24,24 @@
     <script src="js/scratch-bootstrap.js"></script>
   </head>
   <body class="noscroll">
-    <header>
-      <h3>header</h3>
-    </header>
+      <header>
+        <div class="row full">
+          <div class="col-xs-3">
+            <h3>Mineclicks</h3>
+          </div>
+          <div class="col-xs-6">
+            &nbsp;
+          </div>
+          <div class="col-xs-3">
+            <div class="pull-right">
+              <span>1234</span>
+              <button class="btn btn-default">Save</button>
+              <button class="btn btn-default">Load</button>
+              <button class="btn btn-default">Reset</button>
+            </div>
+          </div>
+        </div>
+      </header>
     
     <div id="maincol" class="main container-fluid full">
       <div id="mainrow" class="row">
